--- a/index.html
+++ b/index.html
@@ -3,216 +3,195 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hyper Sonic Mind | A Revolution Begins</title>
-  <meta name="description" content="Hyper Sonic Mind by Virendra: Futuristic AI Projects, Games, and Digital Revolution.">
-  <meta name="keywords" content="AI, India, HSM, Hyper Sonic Mind, Games, Tech Startup, Virendra">
+  <title>Hyper Sonic Mind | Powered by Virendra</title>
+  <meta name="description" content="Hyper Sonic Mind by Virendra: Futuristic AI, Games, and Digital Revolution">
+  <meta name="keywords" content="AI, India, HSM, Hyper Sonic Mind, PvG, Tech Startup, Virendra">
   <meta name="author" content="Virendra">
+  <link rel="icon" href="favicon.png">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
       scroll-behavior: smooth;
-    }
-    html, body {
-      background-color: #0d0d0d;
-      color: #f2f2f2;
-      font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
     }
+    html, body {
+      font-family: 'Orbitron', sans-serif;
+      background: #0d0d0d;
+      color: #f2f2f2;
+      perspective: 1000px;
+      overflow-x: hidden;
+    }
+    header, section {
+      transform-style: preserve-3d;
+      animation: fadeIn 1.5s ease forwards;
+    }
     header {
       background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-      padding: 30px 20px 80px;
       text-align: center;
-      position: relative;
+      padding: 60px 20px;
+      transform: rotateX(10deg);
     }
-    .nav-container {
-      margin-top: 20px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-    }
-    .nav-container a {
-      color: #00ffff;
-      text-decoration: none;
-      font-weight: bold;
-      padding: 8px 16px;
-      border-radius: 4px;
-      transition: background 0.3s;
-    }
-    .nav-container a:hover {
-      background: rgba(0, 255, 255, 0.2);
+    header img {
+      width: 160px;
+      height: 160px;
+      border-radius: 10px;
+      border: 3px solid #00ffff;
+      margin-bottom: 20px;
+      box-shadow: 0 0 15px #00ffff;
     }
     header h1 {
-      margin: 0;
       font-size: 2.8rem;
       color: #00ffff;
-      font-family: 'Orbitron', sans-serif;
       text-shadow: 0 0 10px #00ffff;
     }
     header p {
-      font-size: 1.2rem;
-      color: #aaa;
-      margin: 10px 0 20px;
       font-style: italic;
+      color: #aaa;
     }
-    .download-game {
-      margin-top: 20px;
+    nav {
+      background: #1a1a1a;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+      padding: 15px;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      transform: translateZ(20px);
     }
-    .download-game a {
-      display: inline-block;
-      background: #00ffff;
-      color: #000;
-      padding: 10px 25px;
-      font-weight: bold;
-      border-radius: 5px;
+    nav a {
+      color: #00ffff;
       text-decoration: none;
+      font-weight: bold;
+      padding: 10px 15px;
+      transition: all 0.3s ease;
     }
-    .download-game a:hover {
-      background: #00e0e0;
+    nav a:hover {
+      background: #00ffff33;
+      transform: scale(1.1);
     }
     section {
-      padding: 60px 20px;
       max-width: 900px;
       margin: auto;
-      border-bottom: 2px solid #00ffff;
-      scroll-margin-top: 100px;
+      padding: 60px 20px;
+      transform: rotateX(5deg);
+      animation: slideIn 1s ease forwards;
     }
     h2 {
+      color: #00ffff;
       border-left: 5px solid #00ffff;
       padding-left: 10px;
-      color: #00ffff;
+      margin-bottom: 20px;
     }
-    .highlight {
-      background: #1a1a1a;
-      padding: 20px;
-      border-left: 4px solid #00ffff;
-      margin-top: 20px;
+    .video-container iframe {
+      width: 100%;
+      height: 400px;
+      border: none;
+      box-shadow: 0 0 15px #00ffff44;
+      transform: rotateY(2deg);
     }
-    blockquote {
-      font-style: italic;
-      border-left: 4px solid #555;
-      padding-left: 15px;
-      color: #ccc;
-      margin: 30px 0;
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+    input, textarea, button {
+      padding: 10px;
+      border-radius: 4px;
+      border: none;
+    }
+    input, textarea {
+      background: #1e1e1e;
+      color: white;
+    }
+    button {
+      background: #00ffff;
+      color: black;
+      font-weight: bold;
+      cursor: pointer;
+      transition: transform 0.3s ease;
+    }
+    button:hover {
+      background: #00e0e0;
+      transform: scale(1.05);
     }
     footer {
       background: #111;
       text-align: center;
       padding: 20px;
       color: #666;
+      transform: rotateX(-2deg);
     }
-    .feedback {
-      margin-top: 40px;
-      background: #1a1a1a;
-      padding: 20px;
-      border-left: 4px solid #00ffff;
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
     }
-    .feedback label {
-      display: block;
-      margin-bottom: 10px;
-      color: #ccc;
-    }
-    .feedback textarea {
-      width: 100%;
-      height: 100px;
-      background: #0d0d0d;
-      border: 1px solid #00ffff;
-      color: #fff;
-      padding: 10px;
-    }
-    .feedback button {
-      margin-top: 10px;
-      background: #00ffff;
-      color: #000;
-      border: none;
-      padding: 10px 20px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    .feedback button:hover {
-      background: #00e0e0;
-    }
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 2rem;
-      }
-      .nav-container {
-        flex-direction: column;
-        align-items: center;
-      }
-      section {
-        padding: 40px 15px;
-      }
-      .download-game a {
-        padding: 8px 16px;
-        font-size: 0.9rem;
-      }
-      header p {
-        font-size: 1rem;
-      }
-      h2 {
-        font-size: 1.4rem;
-      }
-      body {
-        font-size: 15px;
-      }
+    @keyframes slideIn {
+      from { opacity: 0; transform: translateZ(-300px) rotateX(10deg); }
+      to { opacity: 1; transform: translateZ(0) rotateX(0); }
     }
   </style>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
+    <img src="A (70).jpeg" alt="Virendra">
     <h1>Hyper Sonic Mind ⚙️</h1>
     <p>"We don’t follow trends — we build them." 🚀</p>
-    <div class="nav-container">
-      <a href="#home">🏠 Home</a>
-      <a href="#about">🧠 About</a>
-      <a href="#projects">🛠️ Projects</a>
-      <a href="#contact">📬 Contact</a>
-      <a href="#more">✨ More</a>
-    </div>
-    <div class="download-game">
-      <a href="#" onclick="alert('Coming Soon! 🚧')">🎮 Download Game (Coming Soon)</a>
-    </div>
   </header>
 
+  <nav>
+    <a href="#home">🏠 Home</a>
+    <a href="#about">🧠 About</a>
+    <a href="#projects">🛠️ Projects</a>
+    <a href="#pvg">🎮 PvG</a>
+    <a href="#contact">📬 Contact</a>
+  </nav>
+
   <section id="home">
-    <h2>⚡ The Beginning of a Revolution</h2>
-    <p>From a small room in Rajkot, Gujarat — not a garage in Silicon Valley — a storm is rising. Meet <strong>Virendra</strong>, a 19-year-old visionary who didn’t wait for resources or permission. He built Hyper Sonic Mind (HSM) out of sheer fire, frustration, and futuristic ambition. No funding, no fancy tools — just pure intent and relentless coding. 💻🔥</p>
-    <blockquote>“I don’t chase opportunities — I create them.” 🧨</blockquote>
+    <h2>⚡ The Beginning</h2>
+    <p>From Rajkot, Gujarat — not Silicon Valley — comes a revolution. Meet <strong>Virendra</strong>, a 19-year-old visionary building HSM from scratch. No investors. No shortcuts. Just code, courage and chaos. 💻🔥</p>
   </section>
 
   <section id="about">
-    <h2>🧠 About</h2>
-    <p>Hyper Sonic Mind (HSM) is a visionary project aimed at building futuristic tech, AI-based tools, and revolutionary digital experiences — all from the heart of India. 🇮🇳</p>
+    <h2>🧠 About HSM</h2>
+    <p>Hyper Sonic Mind (HSM) is India’s most ambitious tech startup, focusing on building voice-based AI, futuristic games, and systems that work for the common desi user — in Hindi and English.</p>
   </section>
 
   <section id="projects">
     <h2>🛠️ Projects</h2>
-    <p>Currently working on: CyberEye (AI security assistant) 👁️, Vision (Hindi AI assistant) 🗣️, PvG (AI-based multiplayer games) 🎮, and more. Stay tuned for the madness to drop. 💥</p>
+    <ul>
+      <li><strong>Vision AI:</strong> Hindi-based smart assistant that talks, listens, and works like your digital buddy.</li>
+      <li><strong>CyberEye:</strong> Security-focused AI tool for system monitoring.</li>
+      <li><strong>PvG Universe:</strong> A survival gaming world inspired by PUBG + Bear Grylls, made in India.</li>
+    </ul>
+  </section>
+
+  <section id="pvg">
+    <h2>🎮 PvG – Survival Game Show</h2>
+    <div class="video-container">
+      <iframe src="https://www.youtube.com/embed/h0uxvKUjsj4" allowfullscreen></iframe>
+    </div>
+    <h3>Submit Your Challenge</h3>
+    <form action="mailto:pvg@hsm.com" method="POST" enctype="text/plain">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="text" name="title" placeholder="Challenge Title" required>
+      <textarea name="description" placeholder="Describe your challenge..." rows="4" required></textarea>
+      <button type="submit">Submit</button>
+    </form>
   </section>
 
   <section id="contact">
-    <h2>📬 Contact</h2>
-    <p>Facebook: 👍 <a href="https://www.facebook.com/share/1CJErp3t9b/" target="_blank" style="color: #00ffff;">Hyper Sonic Mind</a></p>
-    <p>YouTube: ▶️ <a href="https://youtube.com/@pvgofficial-g4x3j?si=WrKa6aeyfB3EYdna" target="_blank" style="color: #00ffff;">Hyper Sonic Mind</a></p>
-  </section>
-
-  <section id="more">
-    <h2>✨ More</h2>
-    <p>Want to collaborate, contribute, or just vibe with the energy? 🌌 This is just the start. Get ready for the Hyper Sonic Storm. ⚡</p>
-  </section>
-
-  <section class="feedback">
-    <h2>💬 Feedback</h2>
-    <label for="feedback">We'd love to hear from you:</label>
-    <textarea id="feedback" placeholder="Your thoughts, ideas, or questions..."></textarea>
-    <button type="button" onclick="alert('Thanks for your feedback! 😊')">Submit Feedback 📨</button>
+    <h2>📬 Contact Us</h2>
+    <p>📘 Facebook: <a href="https://www.facebook.com/share/1CJErp3t9b/" target="_blank" style="color:#00ffff;">Hyper Sonic Mind</a></p>
+    <p>📺 YouTube: <a href="https://youtube.com/@pvgofficial-g4x3j?si=WrKa6aeyfB3EYdna" target="_blank" style="color:#00ffff;">HSM Channel</a></p>
   </section>
 
   <footer>
-    &copy; 2025 Hyper Sonic Mind | Built by Virendra & ChatGPT — The rebel alliance. 🤖🔥
+    &copy; 2025 Hyper Sonic Mind | Built by Virendra ⚡
   </footer>
 </body>
 </html>
+s
