--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 </head>
 <body>
   <header>
-    <img src="A (70).jpeg" alt="Virendra">
+    <img src="virendra.jpg" alt="Virendra">
     <h1>Hyper Sonic Mind ⚙️</h1>
     <p>"We don’t follow trends — we build them." 🚀</p>
   </header>
@@ -194,4 +194,3 @@
   </footer>
 </body>
 </html>
-s
